--- a/chat/lib/chat_web/templates/page/index.html.eex
+++ b/chat/lib/chat_web/templates/page/index.html.eex
@@ -1,4 +1,4 @@
-<h2>Hello Word Chat</h2>
+<h2>Phoenix Hello Word - Chat</h2>
 <div id="chat-box">
   <%= for message <- @messages do %>
       <p><b><%= message.name %></b>: <%= message.body %></p>
